# kvm-manager

./: package-lock.json  package.json  tsconfig.json
profiles/: proxmox-ve.json  proxmox-ve.xml
src/: App.tsx
src-tauri/: Cargo.toml
src-tauri/src/: main.rs  monitoring.rs  network.rs  storage.rs  system_monitor.rs  types.rs  vm_manager.rs  xml_parser.rs
src/components/: CreateVmModal.tsx  ImportVmDialog.tsx  LoadingSpinner.tsx  MetricCard.tsx  ResourceChart.tsx  Sidebar.tsx  VMDetailsModal.tsx  VirtualMachinesDashboard.tsx  VmCard.tsx  VmList.tsx
src/contexts/: NotificationContext.tsx
src/pages/: Dashboard.tsx  Networks.tsx  Settings.tsx  Storage.tsx  VirtualMachines.tsx
src/types/: index.ts
