[package]
name = "kvm-manager"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
virt = "0.4"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures = "0.3"
regex = "1.0"
clap = { version = "4.0", features = ["derive"] }
sysinfo = "0.30"
tokio-stream = "0.1"
once_cell = "1.19"
dashmap = "5.5"
notify = "6.1"
base64 = "0.21"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
